--- a/css/style.css
+++ b/css/style.css
@@ -90,147 +90,25 @@ li a:hover {
 
 /* ------------------------------------- FLEX GIT -----------------------------------*/
 
-.git {
+article {
   display: flex;
-  padding: 40px;
-  width: 600px;
+  justify-content: space-between;
   align-items: center;
-  margin: auto;
-  margin-top: 30px;
-  justify-content: space-around;
-  background-color: #FFFFFF;
-  border: solid 5px #516365;
 }
 
-
-.git img {
-  padding: 20px;
-  padding-left: 30px
+article img {
+  width: 10%;
+  height: 10%;
+  padding: 10%;
 }
 
-.git h3 {
-  font-family: 'Share Tech Mono', monospace;
-  color: #516365;
-}
-
-.git p {
-  padding: 20px;
-  font-family: helvetica, arial;
+article p {
   text-align: justify;
-  color: #516365;
-}
-
-/* ------------------------------------- FLEX HTML -----------------------------------*/
-
-.html {
-  display: flex;
-  padding: 40px;
-  width: 600px;
-  align-items: center;
-  margin: auto;
-  margin-top: 30px;
-  background-color: #FFFFFF;
-  border: solid 5px #516365;
-}
-
-.html img {
-  padding: 20px;
-}
-
-.html h3 {
-  font-family: 'Share Tech Mono', monospace;
-  color: #516365;
-}
-
-.html p {
-  padding: 20px;
+  width: 40%;
   font-family: helvetica, arial;
-  text-align: justify;
-  color: #516365;
 }
 
-/* ------------------------------------- FLEX CSS -----------------------------------*/
-
-.css {
-  display: flex;
-  padding: 40px;
-  width: 600px;
-  align-items: center;
-  margin: auto;
-  margin-top: 30px;
-  background-color: #FFFFFF;
-  border: solid 5px #516365;
-}
-
-.css img {
-  width: 75px;
-  padding: 20px;
-  padding-left: 45px;
-  }
-
-.css h3 {
+article h3 {
   font-family: 'Share Tech Mono', monospace;
-  color: #516365;
-}
-
-.css p {
-  padding: 20px;
-  font-family: helvetica, arial;
-  padding-left: 30px;
-  text-align: justify;
-  color: #516365;
-}
-
-/* ------------------------------------- FLEX JAVASCRIPT -----------------------------------*/
-
-.javascript {
-  display: flex;
-  padding: 40px;
-  width: 600px;
-  align-items: center;
-  margin: auto;
-  margin-top: 30px;
-  background-color: #FFFFFF;
-  border: solid 5px #516365;
-}
-
-.javascript h3 {
-  font-family: 'Share Tech Mono', monospace;
-  color: #516365;
-}
-
-.javascript p {
-  padding: 20px;
-  font-family: helvetica, arial;
-  padding-left: 100px;
-  text-align: justify;
-  width: 400px
-  color: #516365;
-}
-
-/* ------------------------------------- FLEX PHP -----------------------------------*/
-
-.php {
-  display: flex;
-  padding: 40px;
-  width: 600px;
-  align-items: center;
-  margin: auto;
-  margin-top: 30px;
-  background-color: #FFFFFF;
-  border: solid 5px #516365;
-}
-
-.php h3 {
-  font-family: 'Share Tech Mono', monospace;
-  color: #516365;
-}
-
-.php p {
-  padding: 20px;
-  font-family: helvetica, arial;
-  padding-left: 170px;
-  text-align: justify;
-  width: 400px;
   color: #516365;
 }
